--- a/product-manager.html
+++ b/product-manager.html
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/renew/jobs/4359807002'>Job Application for Senior Product Manager at Renew Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/renew/jobs/4359807002'>Job Application for Senior Product Manager at Renew Health</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/adara/2e557625-7436-4573-be2e-b6b61ea10eb1'>ADARA - Sr. Technical Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/adara/2e557625-7436-4573-be2e-b6b61ea10eb1'>ADARA - Sr. Technical Product Manager</a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://digimind.recruiterbox.com/jobs/fk03fte'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://digimind.recruiterbox.com/jobs/fk03fte'>
     Product Owner / AMOA at Digimind
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -152,7 +152,7 @@
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumere.applytojob.com/apply/nUt3uMKTH2/Product-Manager'>Product Manager - Lumere - Career Page</a></h5> 
+<h5><a href='https://lumere.applytojob.com/apply/nUt3uMKTH2/Product-Manager'>Product Manager - Lumere - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Product Manager at Lumere in Chicago, IL.</p>
 <hr/>
@@ -187,7 +187,7 @@ Manager to join our Product team in our San Francisco office. WHAT WE OFFER
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago, IL San Diego Chicago</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -205,7 +205,7 @@ Pegipegi.</p>
 <p>Jul 19, 2019 ... Apply online for the job of Pricing and Product Manager: Boise 7.19.19 at Hayden 
 Beverage Company.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/product-manager-90246'>Product Manager - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/product-manager-90246'>Product Manager - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Technology has always been at the heart of what we do and deliver at EY. We 
 need technology to keep an organization the size of ours working...</p>
@@ -269,7 +269,7 @@ design solutions to our customer problems. Create user stories that communicate
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -292,7 +292,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -330,12 +330,12 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://careers-learfield-external.icims.com/jobs/2830/assistant-product-manager%2C-streaming-services/job'>Assistant Product Manager, Streaming Services in Syracuse, New ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-learfield-external.icims.com/jobs/2830/assistant-product-manager%2C-streaming-services/job'>Assistant Product Manager, Streaming Services in Syracuse, New ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... SIDEARM Sports is now hiring a Assistant Product Manager, Streaming Services 
 in Syracuse, New York. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurostar.workable.com/j/54562E7FB1'>Eurostar - Jobs: Senior Product Owner - Apply online</a></h5> 
+<h5><a href='https://eurostar.workable.com/j/54562E7FB1'>Eurostar - Jobs: Senior Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -359,7 +359,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -434,7 +434,7 @@ published: 04.04.2019). Apply now or check the other available jobs.</p>
 <p>Jul 17, 2019 ... Coya AG has a job opening for Senior Product Manager (m/f/d) in Berlin (
 published: 12.04.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/2E9313501C'>Tide Business Banking - Jobs: Product Designer - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/j/2E9313501C'>Tide Business Banking - Jobs: Product Designer - Apply online</a></h5> 
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -466,11 +466,11 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/people-ai/adc56525-2c8d-46e3-9339-51e597bae05f'>People.ai - Senior Product Manager, CRM Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/people-ai/adc56525-2c8d-46e3-9339-51e597bae05f'>People.ai - Senior Product Manager, CRM Platform</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/Ykm5T4v6eW/Product-Manager'>Product Manager - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/Ykm5T4v6eW/Product-Manager'>Product Manager - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
