--- a/internship.html
+++ b/internship.html
@@ -125,13 +125,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://indg.recruitee.com/o/360-photography-intern'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indg.recruitee.com/o/360-photography-intern'>
       360 Photography Intern - INDG
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indg.recruitee.com/o/360-photography-intern-bucharest'>
+<h5><a href='https://indg.recruitee.com/o/360-photography-intern-bucharest'>
       360 Photography Intern - INDG
     </a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
@@ -185,11 +185,11 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284380-content-writer-internship'>Seeka Technology Content Writer Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284380-content-writer-internship'>Seeka Technology Content Writer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284501-human-resource-internship'>Seeka Technology Human Resource Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284501-human-resource-internship'>Seeka Technology Human Resource Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -271,7 +271,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cross-country/job/oWOCafwg'>CrossCountry Mortgage, Inc Careers - Digital Marketing Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cross-country/job/oWOCafwg'>CrossCountry Mortgage, Inc Careers - Digital Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -320,7 +320,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
     Social Media Intern - Fall 2019 at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -346,7 +346,7 @@ every?...</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... ... Canada, Montreal; Business Analyst and Data Modeler for Airline Standards, 
 Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
@@ -355,7 +355,7 @@ Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nist.join.com/jobs/268478-product-management-internship-starting-in-september'>Job @ NIST (Berlin): Product Management Internship... | JOIN</a></h5> 
+<h5><a href='https://nist.join.com/jobs/268478-product-management-internship-starting-in-september'>Job @ NIST (Berlin): Product Management Internship... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -391,7 +391,7 @@ quality?...</p>
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nicesystems/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -445,7 +445,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
